--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -6,6 +6,11 @@
 	text-decoration: none;
 	scroll-behavior: smooth;
 }
+
+body{
+    font-size: 100%;
+}
+
 header{
     z-index: 1000;
     width: 100%;
@@ -135,28 +140,40 @@ footer span:hover{
 }
 
 .container{
-    padding-top: 25vh;
+    padding-top: 30vh;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     height: 110vh;
     color: #ffffff;
     background-color:#050a30;
-    text-align: center;
     font-weight: 10;
 }
 
 .text{
-    background-color: brown;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+.text div{
+    text-align: center;
+}  
+
 .icones{
-    background-color: blueviolet;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icones div{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap : 80px;
+    row-gap: 40px;
 }
 
 .icones img {
-    width: 100px;
+    width: 80px;
 }
 
 .container div{
@@ -179,4 +196,48 @@ footer span:hover{
 
 @keyframes mycan {
     50% {text-decoration-style: wavy;}
+}
+
+/* ------------------------------------------------------------------------------------------------------------------------------*/
+/* ------------------------------------------------------------------------------------------------------------------------------*/
+
+.projects{
+    margin-top: 100px;
+    background-color: red;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 60px;
+    padding: 50px;
+}
+
+.project-bloc{
+    background-color: darkgoldenrod; 
+    padding-bottom: 30px;
+}
+
+.bloc-img {
+    width: 100%;
+}
+
+.bloc-description {
+    padding: 15px;
+    text-align: justify;
+}
+
+.bloc-description h1 {
+    padding-bottom: 10px;
+}
+
+
+.bloc-img img{
+    width: 100%;
+}
+
+.project-bloc button{
+    font-size: 1.1em;
+    margin-top: 20px;
+    width: 100%;
+    background-color: #050a30;
+    color: #ffffff;
+    padding: 10px ;
 }
