--- a/css/projects.css
+++ b/css/projects.css
@@ -69,6 +69,11 @@ header > ul {
     border-radius: 0;
     display: none;
 }
+
+.headerMobile #logo-noir{
+    display: none;
+}
+
 button#lang {
     border: 3px solid #050a30;
     border-radius: 5px;
@@ -320,21 +325,30 @@ body > h1 span{padding: 1px 14px;
 
     header{
         padding-top: 0px;
-        background-color: red;
+        background-color: #5bcba7;
         display: block;
+        height: 7vh;
     }
-
     #menu{
         height: 5vh;
         margin-right: 30px;
         width: auto;
         display: block;
     }
-
+    .headerMobile #logo{
+        display: none;
+    }
+    .headerMobile #logo-noir{
+        display: block;
+        height: 80%;
+        width: auto;
+        margin-left: 15px;
+    }
     .container {
         height: auto;
         padding-bottom: 100px;
     }
+    
     .text div h1{
         font-size: 60px;
     }  
@@ -346,31 +360,28 @@ body > h1 span{padding: 1px 14px;
 
     .headerMobile{
         background-color: #5bcba7;
-        height: 10vh;
+        height: 7vh;
     }
 
-    .headerMobile #logo{
-        height: 6vh;
-        width: auto;
-        margin-left: 15px;
-    }
     .canou{
         width: 100vw;
         min-height: 100vh;
         display: grid;
         grid-template-columns: 1;
-        row-gap: 20px;
+        row-gap: 40px;
         background-color: white;
         padding: 100px 300px 300px 100px;
+        background-color: #050a30;
     }
 
-    .navbarMask{
-        display: none;
-    }
     .canou a {
         color: #5bcba7;
         font-size: 30px;
         font-weight: bold;
+    }
+
+    .navbarMask{
+        display: none;
     }
 
     .navbar a:hover {
@@ -380,14 +391,95 @@ body > h1 span{padding: 1px 14px;
     }
 }
 
-@media only screen and (max-width: 409px) {
+@media only screen and (max-width: 420px) {
+
+    .container{
+        padding-top: 20vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 110vh;
+        font-weight: 10;
+    }
+
+    .container > div {
+        align-self: center;
+    }
 
     .text div h1{
-        font-size: 50px;
+        font-size: 40px;
     }  
 
     .icones img {
-        width: 40px;
+        width: 35px;
         margin-top: 50px;
+    }
+
+    .icones div{
+        column-gap : 60px;
+        row-gap: 30px;
+    }
+
+    .navbar a {
+        font-size: 20px;
+    }
+
+    #menu{
+        height: 3.5vh;
+    }
+
+    .headerMobile #logo-noir{
+        height: 55%;
+        margin-left: 12px;
+    }
+
+    header{
+        height: 6vh;
+    }
+
+    .headerMobile{
+        height: 6vh;
+    }
+
+    body > h1 {
+        font-size: 30px;
+    }
+
+    .canou{
+        row-gap: 2px;
+        padding: 50px 50px 50vh 50px;
+    }
+
+    footer{
+        width: 100%;
+        margin-top: 100px;
+        padding: 50px;
+    }
+    
+    .contact{
+        width: 80%;
+    }
+
+    .contact a{
+        width: 45px;
+        height: 45px;
+    }
+
+    
+    .contact a img{
+        width: 30px;
+        height: 30px;
+    }
+}
+
+@media only screen and (max-width: 290px) {
+
+    .container{
+        height: 150vh;
+        width: 135vw;
+    }
+    .canou{
+        width: 150vw;
+        height: 130vh;
     }
 }
